# multi_cauchy

./: CITATION.cff  README.md  pyproject.toml
multi_cauchy/: __init__.py  c_params.py  cdfs.py  datafile_import.py  parsing_algos.py  pdfs.py  plots.py  report.py  simultaneous_fitting.py
tests/: demo.ipynb  demo_w_md.ipynb  fit_multi_cauchy.ipynb  multi_cauchy.ipynb  multi_cauchy_og.ipynb
tests/sample_files/: multi_cauchy_200710 - [Er(TiPS2COT)I(THF)]2 - 2 - 1 - MvsH - VSM.json  multi_cauchy_201201 - [Er_TIPS2COT_I]3 - 2 - 1 - MvsH.json  multi_cauchy_201206 - Er_TiPs2COT_I_THF2 - 1 - 2 - MvsH.json  readme.md
